# gpt-task

./: README.md  pyproject.toml  requirements_cuda.txt  requirements_macos.txt
examples/: gpt2_task_runner_example.py  rtx5090_example.py  stream_example.py  stream_handle_example.py
src/gpt_task/inference/: __init__.py  inference.py
src/gpt_task/models/: args.py
